<resources>
    <string name="app_name">Арсен Воронинман ибн Вадим</string>
    <string name="grant_a_wish">ИСПОЛНИТЬ ЖЕЛАНИЕ</string>
    <string name="submit">ЗАГАДАТЬ ЖЕЛАНИЕ</string>
    <string name="wishesLeft">Осталось желание: 0</string>
    <string name="wish">Желание</string>
    <string name="send">Отправить</string>
    <string name="choose">Выбери задание</string>
    <string name="choosen">Выбрать</string>
    <string name="profile">профиль</string>
    <string name="history">История</string>
    <string name="back">Назад</string>
    <string name="clear">Очистить</string>
    <string name="buy">Купить</string>
</resources>